# FYNAUTOSERVER

./: .env  .gitignore  pyproject.toml
src/fynautoserver/: main.py
src/fynautoserver/config/: config.py
src/fynautoserver/controller/: file_config_crud.py  tenant_info_crud.py
src/fynautoserver/database/: __init__.py
src/fynautoserver/models/: index.py
src/fynautoserver/models/tenant_info_model/: add_tenant_model.py  tenant_info_model.py
src/fynautoserver/models/utils_models/: response_model.py
src/fynautoserver/routers/: index.py
src/fynautoserver/routers/v1/: index.py
src/fynautoserver/routers/v1/file_configs/: file_configs.py
src/fynautoserver/routers/v1/tenant_info/: tenant_info.py
src/fynautoserver/schemas/: index.py
src/fynautoserver/schemas/tenant_info_schema/: add_tenant_schema.py  tenant_info_schema.py
src/fynautoserver/utils/: index.py
src/fynautoserver/utils/api_utils/: response.py
src/fynautoserver/utils/zip_utils/: zip_utils.py
src/tenant/tenants/Superman/: tenantInfo.json
